--- a/mayors/templates/base.html
+++ b/mayors/templates/base.html
@@ -1,10 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+{% extends "bootstrap/base.html" %}
+
+{% block head %}
     <title>Mayor Contact</title>
-</head>
-<body>
-{% block content %}{% endblock %}
-</body>
-</html>
+    {{ super() }}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="static/main.css">
+{% endblock %}
+
+
+
+{% block navbar %}
+    <nav class="navbar nav">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a href="" class="navbar-brand"><h4>Contact Local Officials</h4></a>
+            </div>
+        </div>
+    </nav>
+{% endblock %}
+
+{% block content %}
+
+{% block page_content %}
+{% endblock %}
+
+{% endblock %}
