--- a/mayors/templates/index.html
+++ b/mayors/templates/index.html
@@ -22,14 +22,13 @@
 </div>
 
 
-<form>
+<form id='checks'>
     <div class="input-group form-control">
         <textarea class="form-control" rows="5"></textarea>
     </div>
     <div>
-        <input type="submit" value="#2: Select Recipients" formaction="{{ url_for('recipients') }}">
+        <input type="submit" value="#2: Search for City Officials" formaction="{{ url_for('recipients') }}">
     </div>
 </form>
-
 
 {% endblock %}
