test sendgrid api for mail (i'm so bad w/ git)

--- a/mayors/templates/index.html
+++ b/mayors/templates/index.html
@@ -25,6 +25,7 @@
 <form id='checks'>
     <div class="input-group form-control">
         <textarea class="form-control" rows="5"></textarea>
+        <input
     </div>
     <div>
         <input type="submit" value="#2: Search for City Officials" formaction="{{ url_for('recipients') }}">
