--- a/mayors/templates/base.html
+++ b/mayors/templates/base.html
@@ -4,7 +4,7 @@
     <title>Mayor Contact</title>
     {{ super() }}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="static/main.css">
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='main.css')}}">
 {% endblock %}
 
 
